--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "deploy": "gh-pages -d demo",
-    "watch-sass": "sass --watch sass:demo/css --style=compressed",
+    "watch-sass": "sass --watch sass:demo/css --style=expanded",
     "liveserver": "live-server --port=80 --wait=400 demo/",
     "serve": "concurrently --kill-others \"npm:watch-sass\" \"npm:liveserver\""
   },
