Added 2024 styles to `businesspapers-2024.scss`

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass": "^1.77.6"
   },
   "dependencies": {
-    "@compodoc/live-server": "^1.2.2"
+    "@compodoc/live-server": "^1.2.2",
+    "live-server": "^1.2.2"
   }
 }
